--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Praticando com o Git e Github</h1>
     <h2>O que é o GIT?</h2>
-    <p>O gi é uma ferramenta muito legal que me permite bla bla bla sdfsdf</p>
+    <p>O git é uma ferramenta muito legal que me permite gfdgdfgdf</p>
 
     <h2>O que é o Github</h2>
     <!-- Adicione um outro parágrafo explicando o que é o Github -->
